flux/immich/cilium-network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-network-policy
  namespace: immich
spec:
  description: "Allow imich machine learning to access huggingface.co and cas-bridge.xethub.hf.co"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: machine-learning
  egress:
    - toFQDNs:
        - matchName: huggingface.co
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: cas-bridge.xethub.hf.co
      toPorts:
        - ports:
            - port: "443"
